--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     }
   </style>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk_gXjrLDMSnVRrS-YVmRS2X9C7a8Hrz0"></script>
 </head>
 <body>
   <div id="container">
@@ -35,6 +36,7 @@
           <tr>
             <th>Nombre</th>
             <th>Información</th>
+            <th>Acción</th>
           </tr>
         </thead>
         <tbody>
